# starknet_rollup_on_bitcoin

./: .gitignore  Cargo.toml  ERC20Mintable.json  Makefile  README.md  compose.yaml  go.mod  go.sum
abci/: Cargo.toml
abci/src/abci/: application.rs  bitcoin_watcher.rs  main.rs
abci/src/lib/: mod.rs
abci/starknet_programs/: amm.cairo  amm.json  erc20_mintable.cairo  erc20_mintable.json
bitcoin/: run.sh  start-daemon.sh
frontend/: mix.exs
frontend/assets/css/: app.css
frontend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
frontend/lib/: bridge_web.ex
frontend/lib/bridge/: application.ex  bitcoin_tracker.ex  mailer.ex  repo.ex  tokens.ex
frontend/lib/bridge_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
frontend/lib/bridge_web/components/: core_components.ex  layouts.ex
frontend/lib/bridge_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
frontend/lib/bridge_web/controllers/page_html/: home.html.heex
frontend/lib/bridge_web/live/: transaction_live.ex
frontend/lib/bridge_web/templates/transaction/: index.html.leex
frontend/lib/tokens/: token.ex
frontend/priv/repo/migrations/: 20230515215815_add_table.exs  20230516014352_fix_field_length.exs
frontend/test/support/: conn_case.ex
frontend/test/web_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
ord-decoder/: .gitignore  Cargo.toml
ord-decoder/src/: main.rs  test.json
rollkit-node-bitcoin/: main.go
watcher/: Cargo.toml
watcher/src/: abci_client.rs  inscription_parser.rs  main.rs
web/: mix.exs
web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
web/lib/web/: application.ex  bitcoin_tracker.ex
web/lib/web_web/: endpoint.ex  router.ex  telemetry.ex
web/lib/web_web/components/: core_components.ex
web/lib/web_web/controllers/: error_html.ex  page_controller.ex
web/lib/web_web/live/: transaction_live.ex
web/test/support/: conn_case.ex
web/test/web_web/controllers/: page_controller_test.exs
