[package]
name = "ord-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ord = {git = "https://github.com/casey/ord", commit = "52c4d57ddf515ca828e97694121e67dd263b226e"}
bitcoin = { version = "0.29.1", features = ["rand"] }
serde_json = "*"
hex = "*"