[package]
name = "watcher"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tendermint = "0.32.0"
tendermint-abci = "0.32.0"
tendermint-proto = { version = "0.32.0", default-features = false }
tendermint-rpc = { version = "0.32.0", features = ["http-client"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "std"]}
uuid = { version = "1.2.1", features = ["v4"] }
starknet-sequencer = { path = "../abci" } # Contains transaction types
bitcoin = { version = "0.29.1", features = ["rand"] }
hex = "0.4.3"
ord = "0.5.2"
